# decision_ui

./: .dockerignore  .eslintrc.js  .prettierrc  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
backend/: .gitignore  MANIFEST.in  (+2 more)
code/backend/: .bandit.yaml  .gitignore  README.md  pyproject.toml
code/backend/data/: README.md
code/backend/decision_backend/: __init__.py  cli.py  db.py  decision_support_wrapper.py  env.py  main.py  model.py  schemas.py  translator.py  users.py
code/backend/decision_backend/baklava/common/: constants.py  schema.py
code/backend/decision_backend/baklava/evaluate/: files.py  run.py
code/backend/decision_backend/baklava/model/: parser.py
code/backend/decision_backend/baklava/templates/: mc.R
code/backend/decision_backend/baklava/translate/: estimates.py  model.py  nodes.py  sanitize.py  values.py  variables.py
code/backend/decision_backend/database/: crud.py  schema.py  session.py
code/backend/decision_backend/packaging/: win-env-hook.py  win_env_hook.py
code/backend/decision_backend/rest/: authenticate.py  schema.py
code/backend/decision_backend/rest/crud/: models.py
code/backend/decision_backend/translation/: constants.py  model.py  nodes.py  translator.py
code/backend/resources/: README.md
code/backend/tests/: test_api.py  test_translator.py
code/backend/tests/data/: model.R  model.csv  model.json  model_clean.json
code/backend/tests/fixtures/examples/1_minimal_model/: graph.json  translation.R
code/backend/tests/fixtures/examples/7_apple_agroforestry/: graph.json  translation.R
(+364 files in other folders)
