[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decision_backend"
version = "0.0.1"
description = "Backend for decision_UI using the decisionSupport R package."
authors = [
  {name = "Johannes Kopton", email = "johannes@kopton.org"}
]
license = {text = "tbd" }
readme = {file = "README.md", content-type = "text/markdown"}
classifiers=[  
    # see https://pypi.org/classifiers/
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords=[
  "decision analysis"
]
requires-python = ">= 3.8"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "Jinja2>=3.1.4",
    "fastapi>=0.115.5",
    "pydantic>=2.9.2",
    "fastapi-users[sqlalchemy]>=6.0.1",
    "aiosqlite>=0.20.0",
    "sqlalchemy_utils>=0.41.2"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.10",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    "flake8>=7.1.1",
    "autopep8>=2.3.1",
    "uvicorn>=0.32.0",
    "requests>=2.32.3",
    "httpx>=0.27.2"
]

[project.urls]
Homepage = "https://github.com/johanneskopton/decision_ui"
Documentation = "https://github.com/johanneskopton/decision_ui"
Repository = "https://github.com/johanneskopton/decision_ui.git"
Issues = "https://github.com/johanneskopton/decision_ui/issues"